# mast

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs
