[package]
name = "mast"
version = "0.1.0"
description = "A modern, Rust-powered task executor and project builder. The must-have tool for fast and reliable builds ⚡"
homepage = "https://github.com/Ivanbyone/rake"
readme = "README.md"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.87.0"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
