[package]
name = "mast"
version = "0.1.0"
description = "A modern, Rust-powered task executor and project builder. The must-have tool for fast and reliable builds ⚡"
categories = ["command-line-utilities"]
homepage = "https://github.com/Ivanbyone/mast"
repository = "https://github.com/Ivanbyone/mast"
readme = "README.md"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.87.0"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
ansi_term = "0.12.1"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "mast"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
